# coding_practice

./: .gitignore
Algorithm/sort/1_buble_sort/: main.cpp
Algorithm/sort/2_quick_sort/: main.cpp
Algorithm/sort/3_radix_sort/: main.cpp
hackerrank/Algorism_DataStructure/ArrayManipulation/: input7.txt
hackerrank/Algorism_DataStructure/magic_spell/: main
hackerrank/Algorism_DataStructure/minimum_swap2/: main.cpp
hackerrank/Algorism_DataStructure/new_year_chaos/: main.cpp
hackerrank/Algorithm_DataStructure/ArrayManipulation/: main.cpp
hackerrank/Algorithm_DataStructure/Sherlock and Anagrams/: benchmark_solutions.cpp  main.cpp  solutions.hpp
hackerrank/Algorithm_DataStructure/magic_spell/: main.cpp  test.txt
hackerrank/Algorithm_DataStructure/new_year_chaos/: main
hackerrank/Contest/projectEurler/#244-Slider/: CMakeLists.txt  main.cpp
hackerrank/Contest/projectEurler/#244-Slider/src/: CMakeLists.txt  main.cpp  new_main.cpp  slider_map.cpp  slider_map.h
hackerrank/Contest/projectEurler/#244-Slider/test/: CMakeLists.txt  test_SliderMap.cpp  unittest.cpp
hackerrank/Contest/projectEurler/#244-Slider/test/data/: input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  outputs.txt
hackerrank/interview/Count_Triplets/: benchmark.cpp  input10.txt  input4.txt  main.cpp  solution1.hpp  solution2.hpp  utils.hpp
